  possibilities for adding features and options in the future.  The old syntax
  is still supported.

- Added the "coverage xml" command for producing coverage reports in a
  Cobertura-compatible XML format.

- Added the --timid option to enable a simpler slower trace function that works
  for DecoratorTools (including TurboGears) projects.


Version 3.0.1, 7 July 2009
--------------------------

- Removed the recursion limit in the tracer function.  Previously, code that
  ran more than 500 frames deep would crash.

- Fixed a bizarre problem involving pyexpat, whereby lines following XML parser
  invocations could be overlooked.

- On Python 2.3, coverage.py could mis-measure code with exceptions being
  raised.  This is now fixed.

- The coverage.py code itself will now not be measured by coverage.py, and no
  coverage modules will be mentioned in the nose --with-cover plugin.

- When running source files, coverage.py now opens them in universal newline
  mode just like Python does.  This lets it run Windows files on Mac, for
  example.


Version 3.0, 13 June 2009
-------------------------

- Fixed the way the Python library was ignored.  Too much code was being
  excluded the old way.
  
- Tabs are now properly converted in HTML reports.  Previously indentation was
  lost.

- Nested modules now get a proper flat_rootname.  Thanks, Christian Heimes.


Version 3.0b3, 16 May 2009
--------------------------

- Added parameters to coverage.__init__ for options that had been set on the
  coverage object itself.
  
- Added clear_exclude() and get_exclude_list() methods for programmatic
  manipulation of the exclude regexes.

- Added coverage.load() to read previously-saved data from the data file.

- Improved the finding of code files.  For example, .pyc files that have been
  installed after compiling are now located correctly.  Thanks, Detlev
  Offenbach.

- When using the object api (that is, constructing a coverage() object), data